# HR-Space-project

./: .env.sample  .gitignore  Dockerfile  blog_data.json  docker-compose.yaml  pyproject.toml  rh_kosmos_data.json  user_data.json
api/: permissions.py  urls.py
api/serailizers/: serializers_blog.py  serializers_rh_kosmos.py  serializers_users.py
api/views/: views_blog.py  views_rh_kosmos.py  views_users.py
blog/: admin.py  models.py  tasks.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_reviews_options.py  0004_post_photo.py  0005_alter_post_photo.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
react/: package-lock.json  package.json  urls.py  views.py  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
react/src/: index.js  reportWebVitals.js
react/src/components/: App.js
react/static/react/: main.js
react/templates/react/: vacancy_list.html
rh_kosmos/: admin.py  apps.py  models.py  urls.py  views.py
rh_kosmos/migrations/: 0001_initial.py  0002_initial.py  0003_alter_vacancy_options.py  0004_company_logo.py  0005_rh_subscription.py
rh_kosmos/templates/rh_kosmos/: company_detail.html  company_list.html  home.html  rh_detail.html  rh_list.html
rh_kosmos/templatetags/: rh_kosmos_tags.py
static/css/: bootstrap.min.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py
users/templates/users/: ban.html  login.html  register.html  user_form.html
